--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
+vendor/
 go.work
+.idea/*
+coverage.txt
+.project
+.settings
+.buildpath
+*.ptp-sync-folder
+data/*
+data/logs/*
+.vscode/*
+RELEASE
+/.ptp-sync/
+bin/universum
+config/config.json
+universum
+*.log
+__debug_bin*
+*.swp
