implemented aof replay

--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -4,3 +4,4 @@ MaxConnections=10
 MaxConcurrency=5
 ConnectionReadTimeout=10
 TransactionLogFilePath=/opt/universum/translog.aof
+ForceAOFReplayOnError=1
