improved tcp serverv + other updates

--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -4,4 +4,5 @@ MaxConnections=10
 MaxConcurrency=5
 ConnectionReadTimeout=10
 TransactionLogFilePath=/opt/universum/translog.aof
+ServerLogFilePath=/var/log/universum/server.log
 ForceAOFReplayOnError=1
