implemented multi ops commands + minor improvements

--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -3,6 +3,7 @@ ServerPort=11191
 MaxConnections=10
 MaxConcurrency=5
 ConnectionReadTimeout=10
+AutoRecordExpiryFrequency=2
+AutoSnapshotFrequency=100
 TransactionLogFilePath=/opt/universum/translog.aof
 ServerLogFilePath=/var/log/universum/server.log
-ForceAOFReplayOnError=1
