Added params to INFO command

--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -4,6 +4,7 @@ MaxConnections=10
 MaxConcurrency=5
 ConnectionReadTimeout=10
 AutoRecordExpiryFrequency=2
+AllowedMemoryStorageLimit=1073741824
 AutoSnapshotFrequency=100
 TransactionLogFilePath=/opt/universum/translog.aof
 ServerLogFilePath=/var/log/universum/server.log
