--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -6,5 +6,6 @@ ConnectionReadTimeout=10
 AutoRecordExpiryFrequency=2
 AllowedMemoryStorageLimit=1073741824
 AutoSnapshotFrequency=100
+RecordAutoEvictionPolicy=LRU
 TransactionLogFilePath=/opt/universum/translog.aof
 ServerLogFilePath=/var/log/universum/server.log
