--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -9,3 +9,4 @@ AutoSnapshotFrequency=100
 RecordAutoEvictionPolicy=LRU
 TransactionLogFilePath=/opt/universum/translog.aof
 ServerLogFilePath=/var/log/universum/server.log
+MinimumLogLevel=INFO
