refactored storage engine

--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -1,12 +1,29 @@
-[universum]
+[server]
 ServerPort=11191
 MaxConnections=100
 ConnectionWriteTimeout=10
 RequestExecutionTimeout=10
-AutoRecordExpiryFrequency=2
+
+[storage]
+StorageEngine="MEMORY"
+MaxRecordSizeInBytes=1048576
+
+[storage.memory]
 AllowedMemoryStorageLimit=1073741824
+
+[snapshot]
 AutoSnapshotFrequency=100
-RecordAutoEvictionPolicy=LRU
 TransactionLogFilePath=/opt/universum/translog.aof
+
+[logging]
 ServerLogFilePath=/var/log/universum/server.log
 MinimumLogLevel=INFO
+
+[eviction]
+AutoRecordExpiryFrequency=2
+RecordAutoEvictionPolicy=LRU
+
+[auth]
+AuthenticationEnabled=1
+DbUserName=admin
+DbUserPassword=admin
