lsm storage: SL, bloom shipped

--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -11,6 +11,9 @@ MaxRecordSizeInBytes=1048576
 [storage.memory]
 AllowedMemoryStorageLimit=1073741824
 
+[storage.lsm]
+MemtableStorageType="LB"
+
 [snapshot]
 AutoSnapshotFrequency=100
 TransactionLogFilePath=/opt/universum/translog.aof
