--- a/docs/config.schema.ini
+++ b/docs/config.schema.ini
@@ -13,6 +13,7 @@ AllowedMemoryStorageLimit=1073741824
 
 [storage.lsm]
 MemtableStorageType="LB"
+WriteBlockSize=4096
 
 [snapshot]
 AutoSnapshotFrequency=100
