working model of lsm engine

--- a/docs/config.schema.toml
+++ b/docs/config.schema.toml
@@ -18,9 +18,10 @@ RestoreSnapshotOnStart = true
 [Storage.LSM]
 MemtableStorageType = "LB"
 MaxMemtableRecords = 100000
+MaxMemtableDataSize = 4194304
 BloomFalsePositiveRate = 0.01
 WriteBlockSize = 65536
-BlockCompressionAlgo = "NONE"
+BlockCompressionAlgo = "LZ4"
 DataStorageDirectory = "/opt/universum/data"
 WriteAheadLogDirectory = "/opt/universum/wal"
 WriteAheadLogAsyncFlush = true
