first draft of block cache

--- a/docs/config.schema.toml
+++ b/docs/config.schema.toml
@@ -27,6 +27,7 @@ WriteAheadLogDirectory = "/opt/universum/wal"
 WriteAheadLogAsyncFlush = true
 WriteAheadLogFrequency = 5
 WriteAheadLogBufferSize = 1048576
+BlockCacheMemoryLimit = 1048576
 
 [Logging]
 LogFileDirectory = "/var/log/universum"
