--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Build
 
 on:
   push:
@@ -21,8 +21,9 @@ jobs:
       with:
         go-version: '1.22'
 
+    - name: Test
+      run: make test
+
     - name: Build
       run: make build-prod
 
-    - name: Test
-      run: make test
