- Added some improvements to cluster (still WIP)  - Added initial version of vector engine with HNSW index

--- a/docs/files/config.schema.toml
+++ b/docs/files/config.schema.toml
@@ -11,7 +11,7 @@ TLSKeyFilePath = "/etc/universum/key.pem"
 EnableCluster = false
 HearbeatPort = 11192
 Hosts = ["127.0.0.1"]
-GossipIntervalMs = 1000
+HeartbeatIntervalMs = 1000
 ReplicationFactor = 2
 
 [Storage]
